added love and injoy features section

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             </div>
         </div>
     </header>
-    <main>
-        <section class="quick-list container">
+    <main class="container">
+        <section class="quick-list">
             <div class="quick-list-image">
                 <img src="images/team1.png" alt="">
                 <img src="images/team2.png" alt="">
@@ -43,9 +43,53 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="quick-list-content">
-                <span id="quick-list" class="dark-3">Quick list </span><span id="of-our">of Our</span> <span id="features">Features</span>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <span id="quick-list" class="dark-3">Quick list </span><span id="of-our">of Our</span> <span
+                    id="features">Features</span>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn">Explore More</button>
+            </div>
+        </section>
+        <section class="love-features">
+            <div class="love-features-content">
+                <h1 class="love-features-title">Features you will love & enjoy</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="primary-card">
+                    <div class="card-content">
+                        <h3>Dexktop & Mobile Version</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+                <div class="primary-card">
+                    <div class="card-content">
+                        <h3>Drag & Drop Builder</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+                <div class="primary-card">
+                    <div class="card-content">
+                        <h3>Awesome Modern Design</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+                <div class="primary-card">
+                    <div class="card-content">
+                        <h3>Super Easy to Edit</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+            </div>
+            <div class="love-features-image">
+                <img src="images/architect.png" alt="">
+                <button class="btn">
+                    <h4>10+Year</h4>
+                    <h5>Experience</h5>
+                </button>
             </div>
         </section>
     </main>
