added all of last section

--- a/index.html
+++ b/index.html
@@ -92,9 +92,59 @@
                 </button>
             </div>
         </section>
+        <section class="some-facts">
+            <div class="some-facts-content">
+                <h1>Some Facts</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration.</p>
+            </div>
+            <div class="some-facts-card">
+                <div class="secondary-card">
+                    <div class="facts-card-image"><img src="images/icons/ribon.png" alt=""></div>
+                    <div class="facts-card-content">
+                        <h3>54</h3>
+                        <p>Awards Winnings</p>
+                    </div>
+                </div>
+                <div class="secondary-card">
+                    <div class="facts-card-image"><img src="images/icons/projects.png" alt=""></div>
+                    <div class="facts-card-content">
+                        <h3>1458</h3>
+                        <p>Project Finished</p>
+                    </div>
+                </div>
+                <div class="secondary-card">
+                    <div class="facts-card-image"><img src="images/icons/customers.png" alt=""></div>
+                    <div class="facts-card-content">
+                        <h3>590</h3>
+                        <p>Clients Worked</p>
+                    </div>
+                </div>
+                <div class="secondary-card">
+                    <div class="facts-card-image"><img src="images/icons/email.png" alt=""></div>
+                    <div class="facts-card-content">
+                        <h3>22578</h3>
+                        <p>Email Send</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="sponsors">
+            <div class="sponsors-content">
+                <h1>Our Sponsors</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsors-images">
+                <img src="images/sponsors/spotify.png" alt="spotify image">
+                <img src="images/sponsors/amazon.png" alt="amazon image">
+                <img src="images/sponsors/google.png" alt="google image">
+                <img src="images/sponsors/telerama.png" alt="telerama image">
+                <img src="images/sponsors/figma.png" alt="figma image">
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="primary-bg-color ">
+        <p class="container">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 
